@@ -35,6 +35,8 @@ int  jtag3_getparm(PROGRAMMER * pgm, unsigned char scope,
 int jtag3_setparm(PROGRAMMER * pgm, unsigned char scope,
 		  unsigned char section, unsigned char parm,
 		  unsigned char *value, unsigned char length);
+int jtag3_command(PROGRAMMER *pgm, unsigned char *cmd, unsigned int cmdlen,
+		  unsigned char **resp, const char *descr);
 extern const char jtag3_desc[];
 extern const char jtag3_dw_desc[];
 extern const char jtag3_pdi_desc[];
